--- a/index.html
+++ b/index.html
@@ -2,15 +2,255 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="./css/main.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>cofferoster</title>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
 
+    <header class="header">
+        <div class="container">
+            <div class="header__intro">
+                <a href="./index.html" class="header__link">
+                    <img src="./img/logo.svg" alt="site logo" width="235" height="24" class="header__img">
+                </a>
+                <nav class="header__nav">
+                    <ul class="header__item item">
+                        <li class="item__list">
+                            <a href="./index.html" class="item__link">HOME</a>
+                        </li>
+                        <li class="item__list">
+                            <a href="#" class="item__link">ABOUT US</a>
+                        </li>
+                        <li class="item__list">
+                            <a href="./craete.html" class="item__link">Create your plan</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+
+    <!-- main -->
+
+    <main>
+
+        <!-- hero -->
+
+        <section class="hero">
+            <div class="container">
+                <div class="hero__inner">
+
+                    <h1 class="hero__heading">
+                        Good coffee
+                        is made simply.
+                    </h1>
+                    <p class="hero__text">
+                        Start your mornings with the world’s best coffees. Try our expertly curated artisan coffees from
+                        our best roasters delivered directly to your door, at your schedule.
+                    </p>
+                    <a href="#" class="hero__link">
+                        Create your plan
+                    </a>
+
+                </div>
+            </div>
+
+        </section>
+
+        <!-- our collection -->
+
+        <section class="our-collection">
+            <div class="container">
+                <div class="our-collection__box">
+                    <h2 class="our-collection__title">
+                        our collection
+                    </h2>
+                    <ul class="our-collection__item">
+                        <li class="our-collection__list list">
+                            <img src="./img/denche.png"
+                                alt="denche Ethiopian hand-harvested blend densely packed with vibrant fruit notes. "
+                                class="list__img" width="450" height="375">
+                            <div class="list__box">
+                                <h3 class="list__title">Danche</h3>
+                                <p class="list__text">
+                                    Ethiopian hand-harvested blend densely packed with vibrant fruit notes.
+                                </p>
+                            </div>
+                        </li>
+                        <li class="our-collection__list list">
+                            <img src="./img/gren_ecspresso.png"
+                                alt="Gran Espresso Light and flavorful blend with cocoa and black pepper for an intense experience "
+                                class="list__img" width="450" height="375">
+                            <div class="list__box">
+                                <h3 class="list__title">Gran Espresso</h3>
+                                <p class="list__text">
+                                    Light and flavorful blend with cocoa and black pepper for an intense experience.
+                                </p>
+                            </div>
+                        </li>
+                        <li class="our-collection__list list">
+                            <img src="./img/piccolo.png"
+                                alt="Piccollo Mild and smooth blend featuring notes of toasted almond and dried cherry."
+                                class="list__img" width="450" height="375">
+                            <div class="list__box">
+                                <h3 class="list__title">Piccollo</h3>
+                                <p class="list__text">
+                                    Mild and smooth blend featuring notes of toasted almond and dried cherry.
+                                </p>
+                            </div>
+                        </li>
+                        <li class="our-collection__list list">
+                            <img src="./img/planalto.png"
+                                alt="planato  Brazilian dark roast with rich and velvety body, and hints of fruits and nuts"
+                                class="list__img" width="450" height="375">
+                            <div class="list__box">
+                                <h3 class="list__title">Planalto</h3>
+                                <p class="list__text">
+                                    Brazilian dark roast with rich and velvety body, and hints of fruits and nuts.
+                                </p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <!-- prepare -->
+
+        <section class="prepare">
+            <div class="container">
+                <h2 class="prepare__title">
+                    Why choose us?
+                </h2>
+                <p class="prepare__text">
+                    A large part of our role is choosing which particular coffees will be featured
+                    in our range. This means working closely with the best coffee growers to give
+                    you a more impactful experience on every level.
+                </p>
+                <ul class="prepare__list">
+                    <li class="prepare__item">
+                        <img class="prepare__img" src="./img/bookhome.png" alt="cofferas" width="433" height="500">
+                        <h3 class="prepare__heading">
+                            Best quality
+                        </h3>
+                        <p class="prepare__textt">
+                            Discover an endless variety of the world’s best artisan coffee from each of our roasters.
+                        </p>
+                    </li>
+                    <li class="prepare__item">
+                        <img class="prepare__img" src="./img/cofe.png" alt="cofferas" width="433" height="500">
+                        <h3 class="prepare__heading">
+                            Exclusive benefits
+                        </h3>
+                        <p class="prepare__textt">
+                            Special offers and swag when you subscribe, including 30% off your first shipment.
+                        </p>
+                    </li>
+                    <li class="prepare__item">
+                        <img class="prepare__img" src="./img/giyol.png" alt="cofferas" width="433" height="500">
+                        <h3 class="prepare__heading">
+                            Best quality
+                        </h3>
+                        <p class="prepare__textt">We cover the cost and coffee is delivered fast. Peak freshness:
+                            guaranteed.
+
+                        </p>
+                    </li>
+                </ul>
+            </div>
+
+        </section>
+
+        <!-- work -->
+
+        <section class="work">
+            <div class="container">
+                <h2 class="work__title">
+                    How it works
+                </h2>
+                <div class="work__box">
+                    <span class="work__span"></span>
+                    <span class="work__span"></span>
+                    <span class="work__span"></span>
+                </div>
+                <ol class="work__list">
+                    <li class="work__item">
+                        <div class="work__namber">01</div>
+                        <h3 class="work__hiading">Pick your <br> coffee</h3>
+                        <p class="work__text">Select from our evolving range of artisan coffees. Our beans are ethically
+                            sourced and we pay fair prices for them. There are new coffees in all profiles every month
+                            for you to try out.</p>
+                    </li>
+                    <li class="work__item">
+                        <div class="work__namber">02</div>
+                        <h3 class="work__hiading">Choose the <br> frequency</h3>
+                        <p class="work__text">Customize your order frequency, quantity, even your roast style and grind
+                            type. Pause, skip or cancel your subscription with no commitment through our online portal.
+                        </p>
+                    </li>
+                    <li class="work__item">
+                        <div class="work__namber">03</div>
+                        <h3 class="work__hiading">Receive and <br> enjoy!</h3>
+                        <p class="work__text">We ship your package within 48 hours, freshly roasted. Sit back and enjoy
+                            award-winning world-class coffees curated to provide a distinct tasting experience.</p>
+                    </li>
+                </ol>
+                <a href="#" class="work__link">
+                    Create your plan
+                </a>
+            </div>
+        </section>
+
+
+    </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__inner">
+                <a href="#" class="footer__logo">
+                    <img class="footer__img" src="./img/logo.svg" alt="sita logo" width="235" height="24">
+                </a>
+                <ol class="footer__list">
+                    <li class="footer__item item">
+                        <a href="./index.html" class="item__link">
+                            HOME
+                        </a>
+                    </li>
+                    <li class="footer__item item">
+                        <a href="#" class="item__link">
+                            ABOUT US
+                        </a>
+                    </li>
+                    <li class="footer__item item">
+                        <a href="./craete.html" class="item__link">
+                            Create your
+                        </a>
+                    </li>
+                </ol>
+                <ul class="footer__lokal">
+                    <li class="footer__li">
+                        <a href="#" class="footer__twiter">
+                            <img src="./img/twiter.svg" alt="twiter" width="30" height="30">
+                        </a>
+                    </li>
+                    <li class="footer__li">
+                        <a href="#" class="footer__twiter">
+                            <img class="footer__imgg" src="./img/inistegram.svg" alt="inistegram" width="30"
+                                height="30">
+                        </a>
+                    </li>
+                    <li class="footer__li">
+                        <a href="#" class="footer__twiter">
+                            <img src="./img/facebook.svg" alt="facebook" width="30" height="30">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
